--- a/TCC/index.html
+++ b/TCC/index.html
@@ -10,23 +10,32 @@
 </head>
 
 <body>
-    <header>
-        <h1>cabeçalho 4service</h1>
-    </header>
+    <div class="container">
+        <header>
+            <label class="logo" for="4Service">4Service</label>
+        </header>
 
-    <section>
-        <p>
-            sidebar responsivel
-        </p>
-    </section>
+        <section>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Clientes</a></li>
+                    <li><a href="#">Fornecedores</a></li>
+                    <li><a href="#">Estoque</a></li>
+                    <li><a href="#">Expedição</a></li>
+                    <li><a href="#">Laboratório</a></li>
+                    <li><a href="#">Comercial</a></li>
+                </ul>
+            
+        </section>
 
-    <aside>
-        conteudo
-    </aside>
+        <aside>
+            conteudo
+        </aside>
 
-    <footer>
-        <p>projeto desenvolvido por Vinicius Ramon e Lucas Garbuyo</p>
-    </footer>
+        <footer>
+            projeto desenvolvido por Vinicius Ramon e Lucas Garbuyo
+        </footer>
+    </div>
 </body>
 
 </html>
