--- a/TCC/TCC Pt.2/index.html
+++ b/TCC/TCC Pt.2/index.html
@@ -77,13 +77,13 @@
             </li>
             <li>
                 <a href="#">
-                    <i class='bx bx-cog'></i> 
+                    <i class='bx bx-cog'></i>
                     <span class="link_name">Settings</span>
                 </a>
             </li>
             <li>
                 <a href="#">
-                    <i class='bx bx-log-out'></i> 
+                    <i class='bx bx-log-out'></i>
                     <span class="link_name">Log out</span>
                 </a>
             </li>
@@ -91,26 +91,100 @@
     </div>
 
 
-<!-- Home-Content-->
-<section class="home-section">
-    <nav>
-        <div class="sidebar-button">
-            <i class='bx bx-menu'></i>
-            <span class="dashboard">Dashboard</span>
-        </div>
-        <div class="search-box">
-            <input type="text" placeholder="Search...">
-            <i class='bx bx-search'></i>
-        </div>
-        <div class="profile-details">
-            <!-- <img src="foto.jpeg" alt="photo"> -->
-            <span class="admin_name">Vinicius Ramon</span>
-            <i class='bx bxs-chevron-down'></i>
-        </div>
-    </nav>
+    <!-- Home-Content-->
+    <section class="home-section">
+        <nav>
+            <div class="sidebar-button">
+                <i class='bx bx-menu sidebarBtn'></i>
+                <span class="dashboard">Dashboard</span>
+            </div>
+            <div class="search-box">
+                <input type="text" placeholder="Search...">
+                <i class='bx bx-search'></i>
+            </div>
+            <div class="profile-details">
+                <img src="foto.jpeg" alt="photo">
+                <span class="admin_name">Vinicius Ramon</span>
+                <i class='bx bxs-chevron-down'></i>
+            </div>
+        </nav>
 
-</section>
+        <!-- home-content -->
+        <div class="home-content">
+            <div class="overview-boxes">
+                <div class="box">
+                    <div class="left-side">
+                        <div class="box_topic">Order List</div>
+                        <div class="number">40,876</div>
+                        <div class="indicator">
+                            <i class='bx bx-up-arrow-alt'></i>
+                            <span class="text">Up from yesterday</span>
+                        </div>
+                    </div>
+                    <i class='bx bxs-cart-alt cart'></i>
+                </div>
+                <div class="box">
+                    <div class="left-side">
+                        <div class="box_topic">Total Sales</div>
+                        <div class="number">38,876</div>
+                        <div class="indicator">
+                            <i class='bx bx-up-arrow-alt'></i>
+                            <span class="text">Up from yesterday</span>
+                        </div>
+                    </div>
+                    <i class='bx bxs-cart-add cart two'></i>
+                </div>
+                <div class="box">
+                    <div class="left-side">
+                        <div class="box_topic">Total Profit</div>
+                        <div class="number">12,876</div>
+                        <div class="indicator">
+                            <i class='bx bx-up-arrow-alt'></i>
+                            <span class="text">Up from yesterday</span>
+                        </div>
+                    </div>
+                    <i class='bx bxs-cart cart three'></i>
+                </div>
+                <div class="box">
+                    <div class="left-side">
+                        <div class="box_topic">Total Profit</div>
+                        <div class="number">12,876</div>
+                        <div class="indicator">
+                            <i class='bx bx-down-arrow-alt down'></i>
+                            <span class="text">Up from yesterday</span>
+                        </div>
+                    </div>
+                    <i class='bx bxs-cart-download cart four'></i>
+                </div>
+            </div>
 
+            <!-- sales-content -->
+
+            <div class="sales-boxes">
+                <div class="recent-sale box">
+                    <div class="title">Recent Sale</div>
+                    <div class="sales-details">
+                        <ul class="details">
+                            <li><a href="#">Date</a></li>
+                            <li><a href="#">15 May 2022</a></li>
+                            <li><a href="#">15 May 2022</a></li>
+                            <li><a href="#">15 May 2022</a></li>
+                            <li><a href="#">15 May 2022</a></li>
+                            <li><a href="#">15 May 2022</a></li>
+                            <li><a href="#">15 May 2022</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+
+
+        </div>
+
+    </section>
+
+    <!-- Javascript-->
+   <!--<script src="script.js"></script>--> 
 
 </body>
 
