--- a/TCC/index.html
+++ b/TCC/index.html
@@ -5,37 +5,279 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>homepage</title>
-    <link rel="stylesheet" href="estilo/style.css">
+    <title>Home</title>
+
+    <!--Style-->
+    <link rel="stylesheet" href="style.css">
+
+    <!--BoxIcons CDN Link-->
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
 
 <body>
-    <div class="container">
-        <header>
-            <label class="logo" for="4Service">4Service</label>
-        </header>
-
-        <section>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Clientes</a></li>
-                    <li><a href="#">Fornecedores</a></li>
-                    <li><a href="#">Estoque</a></li>
-                    <li><a href="#">Expedição</a></li>
-                    <li><a href="#">Laboratório</a></li>
-                    <li><a href="#">Comercial</a></li>
-                </ul>
-            
-        </section>
-
-        <aside>
-            conteudo
-        </aside>
-
-        <footer>
-            projeto desenvolvido por Vinicius Ramon e Lucas Garbuyo
-        </footer>
+    <div class="sidebar">
+        <div class="logo-details">
+            <i class='bx bxs-dog'></i>
+            <span class="logo_name">4Service</span>
+        </div>
+        <ul class="nav-links">
+            <li>
+                <a href="#" class="active">
+                    <i class='bx bx-grid-alt'></i>
+                    <span class="links_name">Dashboard</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class='bx bx-box'></i>
+                    <span class="links_name">Product</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class='bx bx-list-ul'></i>
+                    <span class="links_name">Order List</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class='bx bx-pie-chart-alt-2'></i>
+                    <span class="links_name">Analytics</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class='bx bx-coin-stack'></i> <span class="links_name">Stock</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class='bx bx-book-alt'></i>
+                    <span class="links_name">Total Order</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class='bx bx-user'></i>
+                    <span class="links_name">Team</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class='bx bx-message'></i>
+                    <span class="links_name">Messages</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class='bx bx-heart'></i>
+                    <span class="links_name">Favorities</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class='bx bx-cog'></i>
+                    <span class="links_name">Settings</span>
+                </a>
+            </li>
+            <li class="log_out">
+                <a href="#">
+                    <i class='bx bx-log-out'></i>
+                    <span class="links_name">Log out</span>
+                </a>
+            </li>
+        </ul>
     </div>
-</body>
 
+    <!-- Home-Content-->
+    <section class="home-section">
+        <nav>
+            <div class="sidebar-button">
+                <i class='bx bx-menu sidebarBtn'></i>
+                <span class="dashboard">Dashboard</span>
+            </div>
+            <div class="search-box">
+                <input type="text" placeholder="Search...">
+                <i class='bx bx-search'></i>
+            </div>
+            <div class="profile-details">
+                <img src="foto.jpeg" alt="photo">
+                <span class="admin_name">Vinicius Ramon</span>
+                <i class='bx bxs-chevron-down'></i>
+            </div>
+        </nav>
+
+        <!-- home-content -->
+        <div class="home-content">
+            <div class="overview-boxes">
+                <div class="box">
+                    <div class="right-side">
+                        <div class="box_topic">Order List</div>
+                        <div class="number">40,876</div>
+                        <div class="indicator">
+                            <i class='bx bx-up-arrow-alt'></i>
+                            <span class="text">Up from yesterday</span>
+                        </div>
+                    </div>
+                    <i class='bx bxs-cart-alt cart'></i>
+                </div>
+
+                <div class="box">
+                    <div class="right-side">
+                        <div class="box_topic">Total Sales</div>
+                        <div class="number">38,876</div>
+                        <div class="indicator">
+                            <i class='bx bx-up-arrow-alt'></i>
+                            <span class="text">Up from yesterday</span>
+                        </div>
+                    </div>
+                    <i class='bx bxs-cart-add cart two'></i>
+                </div>
+
+                <div class="box">
+                    <div class="right-side">
+                        <div class="box_topic">Total Profit</div>
+                        <div class="number">12,876</div>
+                        <div class="indicator">
+                            <i class='bx bx-up-arrow-alt'></i>
+                            <span class="text">Up from yesterday</span>
+                        </div>
+                    </div>
+                    <i class='bx bxs-cart cart three'></i>
+                </div>
+
+                <div class="box">
+                    <div class="right-side">
+                        <div class="box_topic">Total Return</div>
+                        <div class="number">12,876</div>
+                        <div class="indicator">
+                            <i class='bx bx-down-arrow-alt down'></i>
+                            <span class="text">Down from Today</span>
+                        </div>
+                    </div>
+                    <i class='bx bxs-cart-download cart four'></i>
+                </div>
+            </div>
+
+            <!-- Sales-Content -->
+            <div class="sales-boxes">
+                <div class="recent-sales box">
+                    <div class="title">Recent Sale</div>
+                    <div class="sales-details">
+                        <ul class="details">
+                            <li class="topic">Date</li>
+                            <li><a href="#">15 May 2022</a></li>
+                            <li><a href="#">15 May 2022</a></li>
+                            <li><a href="#">15 May 2022</a></li>
+                            <li><a href="#">15 May 2022</a></li>
+                            <li><a href="#">15 May 2022</a></li>
+                            <li><a href="#">15 May 2022</a></li>
+                        </ul>
+
+                        <ul class="details">
+                            <li class="topic">Customer</li>
+                            <li><a href="#">Alubar</a></li>
+                            <li><a href="#">Delta</a></li>
+                            <li><a href="#">Nestlé</a></li>
+                            <li><a href="#">Nexans</a></li>
+                            <li><a href="#">Hyundai</a></li>
+                            <li><a href="#">Ford</a></li>
+                        </ul>
+
+                        <ul class="details">
+                            <li class="topic">Sales</li>
+                            <li><a href="#">Delivered</a></li>
+                            <li><a href="#">Returned</a></li>
+                            <li><a href="#">Delivered</a></li>
+                            <li><a href="#">Pending</a></li>
+                            <li><a href="#">Delivered</a></li>
+                            <li><a href="#">Delivered</a></li>
+                        </ul>
+
+                        <ul class="details">
+                            <li class="topic">Total</li>
+                            <li><a href="#">$100</a></li>
+                            <li><a href="#">$100</a></li>
+                            <li><a href="#">$123,33</a></li>
+                            <li><a href="#">$100</a></li>
+                            <li><a href="#">$100</a></li>
+                            <li><a href="#">$100</a></li>
+                        </ul>
+                    </div>
+                    <div class="button">
+                        <a href="#">See All</a>
+                    </div>
+                </div>
+
+                <!-- Right Side-->
+                <div class="top-sales box">
+                    <div class="title">Top Selling Product</div>
+                    <ul class="top-sales-details">
+                        <li>
+                            <a href="#">
+                                <img src="images/bag.jpg" alt="">
+                                <span class="product">Gucci Women's Bag</span>
+                            </a>
+                            <span class="price">$14.66</span>
+                        </li>
+
+                        <li>
+                            <a href="#">
+                                <img src="images/bag.jpg" alt="">
+                                <span class="product">Gucci Women's Bag</span>
+                            </a>
+                            <span class="price">$14.66</span>
+                        </li>
+
+                        <li>
+                            <a href="#">
+                                <img src="images/bag.jpg" alt="">
+                                <span class="product">Gucci Women's Bag</span>
+                            </a>
+                            <span class="price">$14.66</span>
+                        </li>
+
+                        <li>
+                            <a href="#">
+                                <img src="images/bag.jpg" alt="">
+                                <span class="product">Gucci Women's Bag</span>
+                            </a>
+                            <span class="price">$14.66</span>
+                        </li>
+
+                        <li>
+                            <a href="#">
+                                <img src="images/bag.jpg" alt="">
+                                <span class="product">Gucci Women's Bag</span>
+                            </a>
+                            <span class="price">$14.66</span>
+                        </li>
+
+                        <li>
+                            <a href="#">
+                                <img src="images/bag.jpg" alt="">
+                                <span class="product">Gucci Women's Bag</span>
+                            </a>
+                            <span class="price">$14.66</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Javascript-->
+    <script>
+        let sidebar = document.querySelector(".sidebar");
+        let sidebarBtn = document.querySelector(".sidebarBtn");
+        sidebarBtn.onclick = function () {
+            sidebar.classList.toggle("active");
+            if (sidebar.classList.contains("active")) {
+                sidebarBtn.classList.replace("bx-menu", "bx-menu-alt-right");
+            } else
+                sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
+        }
+    </script>
+</body>
 </html>
