--- a/3º Semestre/Programação Web 2/Projeto P2 Beta/profile.html
+++ b/3º Semestre/Programação Web 2/Projeto P2 Beta/profile.html
@@ -74,6 +74,17 @@
       </li>
     </ul>
   </div>
+
+  <section class="home-content">
+    <div class="welcome-area">
+      <h1>
+        BEM VINDO! Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum inventore voluptatum beatae in vero eum, quaerat neque sit accusantium, exercitationem quia id recusandae? Repudiandae eos animi harum nobis consequuntur dolore.
+      </h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem hic alias autem dolor quaerat ex officia, quos tempora voluptatem culpa commodi. Eius ipsam provident repudiandae excepturi, tempora vero consequatur unde. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid, recusandae voluptates. Exercitationem repudiandae voluptate, sapiente ipsam quisquam eligendi id praesentium numquam labore esse impedit aut. Iste dicta iusto neque incidunt.
+      </p>
+    </div>
+  </section>
 </body>
 
 </html>
