--- a/TCC/dashboard.html
+++ b/TCC/dashboard.html
@@ -8,7 +8,7 @@
     <title>Home</title>
 
     <!--Style-->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dashboard.css">
 
     <!--BoxIcons CDN Link-->
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
